static/styles/mdp.scss
@import "../../../node_modules/angular-moment-picker/dist/angular-moment-picker.css";
@import "../../../node_modules/angular-moment-picker/dist/themes/material-ui.css";

$color-red : #ff3333;
$color-red--dark : #bf2626;
$color-red--light : #ffd6d6;

$color-brown: #9d8585;
$color-brown--dark: #330000;
$color-brown--light: #d6cccc;

$color-grey : #cbcbcb ;
$color-grey--dark : #808080 ;
$color-grey--light : #f2f2f2 ;

$color-black: #000000;

$color-news : #009999;
$color-news--light : #5cbdbd;

$color-projects : #ff6600;
$color-projects--light : #ffb685;

$color-events : #669900;
$color-events--light : #9dbd5c;

$color-white: #fff;

$color_list : (
        'news': $color-news,
        'news--light': $color-news--light,

        'projects': $color-projects,
        'projects--light': $color-projects--light,
        'project--light': $color-projects--light,
        'project': $color-projects,

        'events': $color-events,
        'events--light': $color-events--light,
        'event--light': $color-events--light,
        'event': $color-events,

        'challenge--light': $color-brown--light,

        'red':$color-red,
        'red--dark':$color-red--dark,
        'red--light':$color-red--light,
        
        'brown':$color-brown,
        'brown--dark':$color-brown--dark,
        'brown--light':$color-brown--light,
        
        'grey':$color-grey,
        'grey--dark':$color-grey--dark,
        'grey--light':$color-grey--light,
        
        'black':$color-black,
        'white':$color-white

);

/*
* TYPHOGRAPHY
*/

.light { font-weight: 300!important; }
.regular { font-weight: 400; }
.semi-bold { font-weight: 700; }
.bold { font-weight: 700; }

.cairo { font-family: 'Cairo', sans-serif!important; }
.zilla { font-family: 'Zilla Slab', serif; }


// BASE

body, html {

  @extend .zilla;
  font-size:12px;

  background-color: $color-grey--light;
  height: 100%;
  width: 100%;
  font-family: 'Cairo', sans-serif;
  color: #333;
  font-weight: 400;

}

header .navbar.navbar-default{
  &, & *:not(.glyphicon) { @extend .cairo; }
}

main {
  display:flex;
  & > * {
      display: flex;
      flex-grow:1;
  }
  .container, .container-fluid {
    & > .row { width:100%}
  }
}


.transparent {opacity:0; height:0; cursor:default;}

.entity-carousel {
  .entity-carousel__header {
    @extend .cairo;
    @extend .regular;
  }

}

.home-page{
  &.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .entity-carousel__header a {  @extend .light; font-size:150%;  }
  p { font-size:1.71rem; }
}


.entity-list, .entity-detail{
  &__title, &__title *:not(i){
    text-transform: uppercase;
    @extend .cairo;
    @extend .light;
  }
}


// elements

@each $entity_name, $entity_color in $color_list {

  .entity--#{$entity_name} {
    .om-spinner__bounce {background-color: $entity_color;}
  }
  .text-#{$entity_name} { color : $entity_color!important; }
  .background-#{$entity_name} {
      background-color: $entity_color !important ;
  }

  .stripe-full--#{$entity_name} {
    &:before {
      content:"";
      background-color:$entity_color;
      position: absolute;
      height: 100%;
      width: 4000px;
      left: -2000px;
      z-index: -1;
    }
  }


}

.entity-carousel{

  background: #fff;
  border-radius: 8px 8px 0 0;

  & * { z-index: 1000;}
  &__header {
    border-radius: 8px 8px 0 0;
    text-align: center;
    h3 {
      margin:0; padding: 8% 0;
      text-transform: uppercase;
    }
  }
  &__body {
    position:relative; z-index:0;
    padding-bottom:80%; overflow: hidden;
    background: #fff;
    & > slick {
      position:absolute; top:0; left:0; bottom:0; right:0;
      width:100%; height: 100%; max-height: 100%;
    }
    img {
      width:100%;
      height:100%; min-height: 100%;
    }
  }

  .slick-arrow--custom {
    //display: none!important;
    z-index: 10000; position: absolute; top: 80%;
    cursor: pointer; font-size: 250%;
    color: $dsp-red;
    &.prev { left: 35%; }
    &.next { right: 35%; }
  }

  &:hover .slick-arrow--custom {display: inline!important;}

  // TEMPLATING
  @each $entity_name, $entity_color in $color_list {
    &--#{$entity_name}{
      .entity-carousel__header {
        background: #{$entity_color}!important;
        color:#fff!important;
        * { color:#fff!important; }
      }
    }
  }

}

.entity-list{
  &__box {
    border: solid 3px #eee;
    background: $color-white;
    //* { overflow:visible!important; }

  }
}
.entity-preview {
  width:100%;
  height:100%
}

.entity-heading {
  i { color:$color-grey}

}

.entity-sidebar {

  @each $entity_name, $entity_color in $color_list {
    &.background-#{$entity_name} {
      &:before {
        @extend .background-#{$entity_name};
        @media all and (max-width: 768px) {
          display: none !important;
          background: none;
        }
      }
    }
  }

  &::before {
    background: #bbb;
    content: ' ';
    height: 150%;
    margin-top: -25%;
    margin-left: -15px;
    position: fixed;
    width: 100%;
    z-index: 0;

    @media all and (max-width: 768px) {
      display: none;
    }

  }
}

.entity-detail{

  &-padding {
    padding:2% 8%;
  }

  &__content {
    * { z-index:1000; }
  }

  .fade {
    position: absolute;
    opacity:1;

    top: 0;
    left: 0;
    bottom:0;
    right:0;
    z-index: 1001;
    width: 100%;
    height: 100%;

    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
    background-size: cover;
  }

  &__event-detail{
    position: relative;
    z-index:1002!important;
  }

  .read-more {
    position:absolute;
    bottom:0;
    left:0;
    width:100%;
    text-align: left;
    z-index:1001;
    font-weight: bold;
    * { color:#f00;}
  }

  .force-square {
    position: relative;
    width:100%;
    padding-bottom:100%;
    overflow:hidden;

    & > * {
      position: absolute;
      top:0;
      right:0;
      bottom:0;
      left:0;
      width:100%;
      height:100%;
    }
  }
}

.entity-detail-page{
  &__content {
    .entity-detail{
      &-padding {
        padding:0;
      }
    }
  }
}

.challenges-detail-page {
  background: $color-brown--light;
  i {color:$color-brown; }
}

.btn {
  @extend .cairo;
  font-weight: bold;
  border-radius: 2px;

  &--white {
    background-color: $color-white;
    border-color: $color-grey;
    color: $color-grey;

    &:hover {
      border-color: $color-grey--dark;
      color: $color-grey--dark;
    }
  }
  &--big {
    padding:15px 40px;
  }

}

// hack bootstrap cointainer
$om_breakpoints: (
  sm: (768, 100),
  md: (992, 100),
  lg: (1200, 90),
  xl: (1650, 80),
);

@each $om_size, $om_bk in $om_breakpoints {

  @media all and (min-width: #{nth($om_bk, 1)}) {
    .container{
      //width: #{nth($om_bk, 2)} px !important;
      background-color: #f00!important;
    }
  }

}

.overflow-here {
  overflow: hidden!important;
  & * { overflow: visible!important}
}

// login
.signup-modal {

  display: flex!important;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  z-index:2000000!important;

  .modal-dialog {

    width:100%;
    height:100%;
    z-index: 2000;

    @media all and (max-width: #{nth(map-get($om_breakpoints,'lg'),1)}px) { margin: 2%; width: 96%; height: 96%;}
    @media all and (max-width: #{nth(map-get($om_breakpoints,'md'),1)}px) { height: 85%;}
    @media all and (min-width: #{nth(map-get($om_breakpoints,'lg'),1)}px) { margin: 15%; width: 70%; height: 90%}
    @media all and (min-width: #{nth(map-get($om_breakpoints,'xl'),1)}px) { margin: 20%; width: 60%; height: 85%;}

    .modal-content {

      width: 100%;
      height: 100%;

      .modal-body {
        display: flex !important;
        flex-direction: column;
        justify-content: space-between;
        align-content: center;
        height: 100%;

        .modal-slider{flex-grow: 1;}
        .slick-list,.slick-track {height: 100%;}
        .slick-track {
          display: flex;
          align-items: center;
        }

      }

      .step-navigation {
        display: flex !important;
        flex-direction: row;
        justify-content: space-between;
        align-content: center;
        & * {
          display: flex !important;
          flex-direction: row;
          justify-content: center;
          align-content: center;
          text-align: center;
          margin: 0;
          align-self: center;
        }

      }

    }
  }

  .signup-template{
    height:100%;
    display: flex !important;
    flex-direction: column;
    justify-content: center;
    align-content: center;

    & > * {
      display: flex !important;
      flex-direction: column;
      justify-content: center;
      align-content: center;
    }

    &__label { text-align: center; }

  }

}

.signup-template{
  $signup-font-size: 120%;

  .signup-input {
    .ui-select-choices-row-inner, .ui-select-match-item{font-size: $signup-font-size;}
    input, select, .ui-select-toggle {
      text-align: center;
      font-size: $signup-font-size; padding: 1.5%;
      border:solid 2px!important;
      border-color: $color-brown--light!important;
      border-radius: 0!important;

    }
    select {
      -webkit-border-radius:0;
      -moz-border-radius:0;
    }

    .ui-select-bootstrap  {

      padding:0; border:none;

      * { box-shadow: none!important; outline:0 !important;}

      & > .ui-select-choices{left:0;text-align: left;}
      input {width:100%!important;}
      .ui-select-highlight { color :$color-brown; }
      .ui-select-choices {.btn { width:100%; text-align: left;}}
      .ui-select-choices-row {
        &.active .ui-select-choices-row-inner {
          background-color:$color-brown--light!important; color:#fff!important;
          .ui-select-highlight { color: $color-black; }
        }
      }
      .ui-select-match-item { background-color:$color-brown!important; color:#fff!important; border:$color-brown--dark!important;}
      .ui-select-placeholder, .ui-select-match-text{ position: relative; top: -10px;}
      .ng-not-empty:first-child{ padding:1%!important; }

    }

  }
}

.moment-picker {
  z-index:200000000000!important;

  font-size: 200%;

  * { color: $color-brown;}
  .header-view {
    border-radius: 5px;

    th, th:hover {
      color: $color-white;
      background: $color-brown--light;
    }

  }
  td {
    &.selected { background: $color-brown--dark; }
  }

}

.pivacy_check_form{
  i, a { color:$color-brown--dark; font-weight: bold;}
}

.pac-container {z-index:100000000;}

.subform-submitted .signup-input{

  //email
  //max
  //maxlength
  //min
  //minlength
  //number
  //pattern
  //required
  //url

  .ng-invalid, // for simple html
  .ng-empty .ui-select-toggle, // simple select
  .ui-select-container.ng-empty .ui-select-search// multi select
  {
    border-color:$color-red!important;
  }

}

